# nebulark

./: .gitignore  404.html  CNAME  Makefile  README.md  assemblyscript-json-calculator.wasm  assemblyscript-simple-calculator.wasm  c-json-calculator.wasm  c-simple-calculator.wasm  cpp-json-calculator.wasm  cpp-simple-calculator.wasm  examples.html  go-json-calculator.wasm  go-simple-calculator.wasm  go.mod  go.sum  index.html  java-json-calculator.wasm  java-simple-calculator.wasm  main.js  package-lock.json  package.json  rust-json-calculator.wasm  rust-simple-calculator.wasm  tinygo-simple-calculator.wasm  transceiver.js  zig-json-calculator.wasm  zig-simple-calculator.wasm
.github/workflows/: make.yaml  mirror.yaml
.old/.theia/: settings.json
.old/cmd/nebulark-ion-app/: main.go
.old/cmd/nebulark-ion-server/: main.go
.old/pkg/virtualmachines/: wasm.go  wasm_builder.go
.old/web/glue/: registerFunctions.js
.old/web/glue/teavm/: wasm-runtime.js
_next/static/-Wrl8VfCZKQThx14euF13/: _buildManifest.js
_next/static/2ImyBYOjXVkUMwJoccgxz/: _buildManifest.js
_next/static/4PJAB5g_mIu_TIu_Sx4HN/: _buildManifest.js
_next/static/7an6c_JPwwSOXhnEeuTQr/: _buildManifest.js
_next/static/8oFd5FZZQi9uYzVWYEOte/: _buildManifest.js
_next/static/HRZ62JVyteg0nDShlWk-3/: _buildManifest.js
_next/static/JXAgcoCG39XgddPVUmSoA/: _buildManifest.js
_next/static/MYYrSasiGoxCwWbirRlb6/: _buildManifest.js
_next/static/P4eAg6-Z2V-A3sQf-EKQf/: _buildManifest.js
_next/static/TrWUbRqHX3HHFLJy9S9lY/: _buildManifest.js
_next/static/U0x26e3XS_3OPvVEDc7s0/: _buildManifest.js
_next/static/VXDPrfxRFRD1XEqvEueiq/: _buildManifest.js
_next/static/YAeg3jhOX-9mzq17Die9P/: _buildManifest.js
_next/static/ZRUTGiuIcCh5_AUkcwD6E/: _buildManifest.js
_next/static/chunks/: 10.e57025c73edb1013717d.js  2b38c15a.753b6d49a580ff55d9cc.js  2b38c15a.88f8153d9fda3cce6084.js  3.abadacb8dc38e087bd2d.js  4.1792b9c89948af4b0737.js  d1c6887d.77d5b545110c19904182.js  d1c6887d.8532c1225da31b16be20.js  d1c6887d.9b1367e579228840be30.js  main-02c23335d689c6a198c4.js  main-148ac50c2139835f5cfc.js  main-7dc659b4f015383b2424.js  webpack-0c44a54313d2a4805fc8.js  webpack-1535691fe22d050051c2.js  webpack-7b4fc7f57bc0090ccde7.js
_next/static/chunks/pages/: _app-0f9a483649d42956514a.js  _app-25ad1aa18fffd25a71e2.js  _app-3d2bbc0db2d62b5b2fc0.js  _app-a344bd7a1ddb1f1b7060.js  _app-d85e5b0e70afa3fa1056.js  examples-0f9e1dcf17bd4b7ab726.js  examples-7806153b6f163d4f8597.js  examples-889f88a720f72badb921.js  examples-97a57385dfa1ca42f018.js  examples-c626ded765c12967e095.js  index-1d35f5b54c1cc40d69d7.js  index-46dfb7cc9e9cce981bd1.js  index-657a8eaa6209d97908ea.js  index-9ceaf6f1839b8342eedc.js  index-abc600a114f76bac93a2.js  index-b7ac69707a8a8ec7ef9c.js
_next/static/mSi2do_wOR6-jwwvtinKd/: _buildManifest.js
_next/static/q5hzmZWuIvFebhpb3vDq6/: _buildManifest.js
_next/static/wJCXyhgBhd4bj6n7C8jem/: _buildManifest.js
cmd/nebulark-ion-app/: main.go
cmd/nebulark-ion-server/: main.go
components/: accordion.js  example.js  header.js  ion.js  ionDashboard.js  nebulaStats.js  recentSpark.js  rewriteIonDashboard.js  rewriteNebulaStats.js  rewriteSparkStats.js  runningSpark.js  sparkDashboard.js  sparkDashboardWebTorrent.js  sparkStats.js  stats.js
design/: architecture.drawio  nebulark Icon.afdesign
examples/: compute.html  discovery.html  networking.html  webTorrent.html
examples/assemblyscript/json_calculator/: package.json
examples/assemblyscript/json_calculator/assembly/: index.ts
examples/assemblyscript/simple_calculator/: package.json
examples/c/json_calculator/: calculator.c  calculator.h
examples/c/simple_calculator/: CMakeLists.txt  calculator.c
examples/cpp/: .gitignore
examples/cpp/json_calculator/: calculator.cc
examples/go/json_calculator/: calculator.go  go.mod
examples/go/simple_calculator/: calculator.go  go.mod
examples/java/json_calculator/: pom.xml
examples/java/simple_calculator/: pom.xml
examples/rust/: Dockerfile
examples/rust/json_calculator/: Cargo.toml
examples/rust/simple_calculator/: Cargo.toml
examples/teavm/: .gitignore
examples/teavm/json_calculator/: pom.xml
examples/teavm/simple_calculator/: pom.xml
examples/tinygo/json_calculator/: go.mod
examples/tinygo/simple_calculator/: go.mod
examples/zig/json_calculator/: calculator.zig
examples/zig/simple_calculator/: calculator.zig
ion/: ion.html
ion-dashboard/: dashboard.html
lib/: bus.js  virtualmachine.js
mission-control/: control.html
pages/: examples.js  index.js
pages/examples/: compute.js  discovery.js  networking.js  webTorrent.js
pages/ion/: ion.js
pages/ion-dashboard/: dashboard.js
pages/mission-control/: control.js  rewriteControl.js
pages/spark-dashboard/: dashboard.js  rewriteDashboard.js  sparkDashboard.js
pkg/components/: app.go
pkg/examples/cpp/json_calculator/: CMakeLists.txt  calculator.cc
pkg/runtimes/: runtime.go  teavm.go  tinygo.go  wasi.go
pkg/sparkexamples/c/json_calculator/: CMakeLists.txt  Dockerfile  calculator.c  calculator.h  nebulark_ion_spark.h
pkg/sparks/: teavm.go  tinygo.go  wasi.go
pkg/virtualmachines/: wasm.go
spark-dashboard/: dashboard.html
web/: app.wasm
web/glue/: registerFunctions.js
web/glue/go/: wasm_exec.js
web/glue/tinygo/: wasm_exec.js
(+85 files in other folders)
